--- a/laravel55/public/css/base.css
+++ b/laravel55/public/css/base.css
@@ -449,7 +449,6 @@ textarea {
     width: 41.66667%;
 }
 
-
 .col-six,
 .col-1-2 {
     width: 50%;
@@ -866,6 +865,21 @@ textarea {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+}
+
+header .right {
+    float: right;
+    display: block;
+    background: #000000;
+    min-width: 220px;
+    min-height: 66px;
+}
+
+header .right > a {
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+
 }
 
 /*# sourceMappingURL=base.css.map */
